Challenge Data Science

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -37,14 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 400
+          "height": 310
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "1a76354a-3b2f-4250-9164-c9fe84608a5d"
+        "outputId": "dbdeba75-aec0-4a5d-b5a4-0ed8b96fcf93"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-de5ec9a9-e79a-4a30-b0af-0952d522022c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-71ce2c94-7434-4884-b218-8f74382ce44a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-de5ec9a9-e79a-4a30-b0af-0952d522022c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-71ce2c94-7434-4884-b218-8f74382ce44a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-de5ec9a9-e79a-4a30-b0af-0952d522022c button.colab-df-convert');\n",
+              "        document.querySelector('#df-71ce2c94-7434-4884-b218-8f74382ce44a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-de5ec9a9-e79a-4a30-b0af-0952d522022c');\n",
+              "        const element = document.querySelector('#df-71ce2c94-7434-4884-b218-8f74382ce44a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -266,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-d9a3fe5a-0a7a-4ca0-877b-86adf12656ca\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d9a3fe5a-0a7a-4ca0-877b-86adf12656ca')\"\n",
+              "    <div id=\"df-4f6456be-a886-4e83-a7a0-74c6fcd90866\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4f6456be-a886-4e83-a7a0-74c6fcd90866')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -386,7 +386,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-d9a3fe5a-0a7a-4ca0-877b-86adf12656ca button');\n",
+              "            document.querySelector('#df-4f6456be-a886-4e83-a7a0-74c6fcd90866 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -403,7 +403,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 134
+          "execution_count": 29
         }
       ],
       "source": [
@@ -485,13 +485,13 @@
       ],
       "metadata": {
         "id": "nKprHDZiDIz7",
-        "outputId": "cab74399-5bff-428d-c4b7-a117b7a4ccfa",
+        "outputId": "cb636f41-3363-427e-96c3-78f530a766ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 752
         }
       },
-      "execution_count": 136,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -588,7 +588,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 136
+          "execution_count": 30
         },
         {
           "output_type": "display_data",
@@ -623,13 +623,52 @@
     {
       "cell_type": "code",
       "source": [
-        "\n"
+        "def leer_csv(url):\n",
+        "    datos = []\n",
+        "    with urlopen(url) as respuesta:\n",
+        "        # Decodificar los datos\n",
+        "        lineas = respuesta.read().decode('utf-8').splitlines()\n",
+        "        reader = csv.DictReader(lineas)\n",
+        "        for fila in reader:\n",
+        "            datos.append(fila)\n",
+        "    return datos\n",
+        "\n",
+        "ventas_por_categoria = {}\n",
+        "resumen = tienda.groupby('Categoría del Producto')['Precio'].sum().sort_values(ascending=False)\n",
+        "\n",
+        "ventas_por_categoria['tienda1'] = resumen\n",
+        "\n",
+        "for tienda, resumen in ventas_por_categoria.items():\n",
+        "  print(f'tienda1')\n",
+        "  print(resumen)\n"
       ],
       "metadata": {
-        "id": "A34YupIuYhfF"
+        "id": "A34YupIuYhfF",
+        "outputId": "34e6cc68-a2e0-46d1-a4d2-e5e5164f5b3f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 132,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tienda1\n",
+            "Categoría del Producto\n",
+            "Electrónicos               429493500.0\n",
+            "Electrodomésticos          363685200.0\n",
+            "Muebles                    187633700.0\n",
+            "Instrumentos musicales      91299000.0\n",
+            "Deportes y diversión        39290000.0\n",
+            "Juguetes                    17995700.0\n",
+            "Artículos para el hogar     12698400.0\n",
+            "Libros                       8784900.0\n",
+            "Name: Precio, dtype: float64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -643,7 +682,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
