Se creó con Colab

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -37,14 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 43,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 310
+          "height": 400
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "dbdeba75-aec0-4a5d-b5a4-0ed8b96fcf93"
+        "outputId": "dadb9da5-f968-4466-fa7a-fc1606c031fb"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-71ce2c94-7434-4884-b218-8f74382ce44a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-6d3553c1-b5eb-4b84-ab7f-53c844dd3f7b\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-71ce2c94-7434-4884-b218-8f74382ce44a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6d3553c1-b5eb-4b84-ab7f-53c844dd3f7b')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-71ce2c94-7434-4884-b218-8f74382ce44a button.colab-df-convert');\n",
+              "        document.querySelector('#df-6d3553c1-b5eb-4b84-ab7f-53c844dd3f7b button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-71ce2c94-7434-4884-b218-8f74382ce44a');\n",
+              "        const element = document.querySelector('#df-6d3553c1-b5eb-4b84-ab7f-53c844dd3f7b');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -266,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-4f6456be-a886-4e83-a7a0-74c6fcd90866\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4f6456be-a886-4e83-a7a0-74c6fcd90866')\"\n",
+              "    <div id=\"df-bc8d7c9c-17a9-4d37-a373-49cd412a1cf1\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-bc8d7c9c-17a9-4d37-a373-49cd412a1cf1')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -386,7 +386,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-4f6456be-a886-4e83-a7a0-74c6fcd90866 button');\n",
+              "            document.querySelector('#df-bc8d7c9c-17a9-4d37-a373-49cd412a1cf1 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -403,15 +403,14 @@
             }
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 43
         }
       ],
       "source": [
         "import pandas as pd\n",
-        "import numpy as np\n",
+        "\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "import collections\n",
+        "\n",
         "\n",
         "url = \"https://raw.githubusercontent.com/alura-es-cursos/challenge1-data-science-latam/refs/heads/main/base-de-datos-challenge1-latam/tienda_1%20.csv\"\n",
         "url2 = \"https://raw.githubusercontent.com/alura-es-cursos/challenge1-data-science-latam/refs/heads/main/base-de-datos-challenge1-latam/tienda_2.csv\"\n",
@@ -485,13 +484,13 @@
       ],
       "metadata": {
         "id": "nKprHDZiDIz7",
-        "outputId": "cb636f41-3363-427e-96c3-78f530a766ad",
+        "outputId": "877a488a-8854-448c-c475-7e1f9b403f88",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 752
         }
       },
-      "execution_count": 30,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -588,7 +587,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 44
         },
         {
           "output_type": "display_data",
@@ -623,6 +622,7 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "def leer_csv(url):\n",
         "    datos = []\n",
         "    with urlopen(url) as respuesta:\n",
@@ -633,39 +633,101 @@
         "            datos.append(fila)\n",
         "    return datos\n",
         "\n",
+        "#Diccionario ventas por categoría\n",
         "ventas_por_categoria = {}\n",
-        "resumen = tienda.groupby('Categoría del Producto')['Precio'].sum().sort_values(ascending=False)\n",
         "\n",
-        "ventas_por_categoria['tienda1'] = resumen\n",
+        "# Procesar topdas las tiendas\n",
+        "for i, url in enumerate(urls):\n",
+        "    datos_tienda = leer_csv(url)\n",
+        "    print(f\"\\nVentas por categoría en Tienda {i+1}:\")\n",
         "\n",
-        "for tienda, resumen in ventas_por_categoria.items():\n",
-        "  print(f'tienda1')\n",
-        "  print(resumen)\n"
+        "    # Diccionario para la tienda actual\n",
+        "    categorias_tienda = {}\n",
+        "\n",
+        "    for venta in datos_tienda:\n",
+        "        categoria = venta ['Categoría del Producto']\n",
+        "        precio = float(venta['Precio'])\n",
+        "        cantidad = int(venta['Cantidad de cuotas'])\n",
+        "        monto_venta = precio * cantidad\n",
+        "\n",
+        "        # Agregar al diccionario de la tienda actual\n",
+        "        if categoria in categorias_tienda:\n",
+        "          categorias_tienda[categoria] += monto_venta\n",
+        "        else:\n",
+        "          categorias_tienda[categoria] = monto_venta\n",
+        "\n",
+        "       #Agregar al diccionario general\n",
+        "        if categoria in ventas_por_categoria:\n",
+        "            ventas_por_categoria[categoria] += monto_venta\n",
+        "        else:\n",
+        "            ventas_por_categoria[categoria] = monto_venta\n",
+        "\n",
+        "    # Mostrar resultados para esta tienda\n",
+        "    for categoria, monto in categorias_tienda.items():\n",
+        "        print(f\" {categoria}: ${monto:.2f}\")\n",
+        "\n",
+        "# Calcular el total general\n",
+        "total_general = sum(ventas_por_categoria.values())\n",
+        "print(f\"\\nTotal general de ventas: ${total_general:.2f}\")\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "A34YupIuYhfF",
-        "outputId": "34e6cc68-a2e0-46d1-a4d2-e5e5164f5b3f",
+        "outputId": "20d7c37e-f25f-4f11-d089-e61f424fb7e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tienda1\n",
-            "Categoría del Producto\n",
-            "Electrónicos               429493500.0\n",
-            "Electrodomésticos          363685200.0\n",
-            "Muebles                    187633700.0\n",
-            "Instrumentos musicales      91299000.0\n",
-            "Deportes y diversión        39290000.0\n",
-            "Juguetes                    17995700.0\n",
-            "Artículos para el hogar     12698400.0\n",
-            "Libros                       8784900.0\n",
-            "Name: Precio, dtype: float64\n"
+            "\n",
+            "Ventas por categoría en Tienda 1:\n",
+            " Electrónicos: $1290390700.00\n",
+            " Muebles: $582928200.00\n",
+            " Juguetes: $49062800.00\n",
+            " Electrodomésticos: $1032375600.00\n",
+            " Artículos para el hogar: $38316800.00\n",
+            " Deportes y diversión: $126883700.00\n",
+            " Libros: $25769400.00\n",
+            " Instrumentos musicales: $276990500.00\n",
+            "\n",
+            "Ventas por categoría en Tienda 2:\n",
+            " Muebles: $527332100.00\n",
+            " Instrumentos musicales: $294448700.00\n",
+            " Deportes y diversión: $81660600.00\n",
+            " Electrónicos: $1286643600.00\n",
+            " Artículos para el hogar: $42739700.00\n",
+            " Juguetes: $46721200.00\n",
+            " Electrodomésticos: $1026226300.00\n",
+            " Libros: $31417000.00\n",
+            "\n",
+            "Ventas por categoría en Tienda 3:\n",
+            " Electrodomésticos: $1081380800.00\n",
+            " Muebles: $555092500.00\n",
+            " Instrumentos musicales: $250336000.00\n",
+            " Deportes y diversión: $123399200.00\n",
+            " Electrónicos: $1101334500.00\n",
+            " Juguetes: $61190400.00\n",
+            " Artículos para el hogar: $44724600.00\n",
+            " Libros: $26358900.00\n",
+            "\n",
+            "Ventas por categoría en Tienda 4:\n",
+            " Electrodomésticos: $879089600.00\n",
+            " Muebles: $556628000.00\n",
+            " Deportes y diversión: $100062000.00\n",
+            " Libros: $29543400.00\n",
+            " Electrónicos: $1211446500.00\n",
+            " Instrumentos musicales: $222837200.00\n",
+            " Juguetes: $54641200.00\n",
+            " Artículos para el hogar: $44579300.00\n",
+            "\n",
+            "Total general de ventas: $13102551000.00\n"
           ]
         }
       ]
