Se creó con Colab

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -665,6 +665,10 @@
         "    # Mostrar resultados para esta tienda\n",
         "    for categoria, monto in categorias_tienda.items():\n",
         "        print(f\" {categoria}: ${monto:.2f}\")\n",
+        "#Mostrar resultados totales\n",
+        "print(\"\\nVentas totales por categoría (todas las tiendas):\")\n",
+        "for categoria, monto in ventas_por_categoria.items():\n",
+        "    print(f\" {categoria}: ${monto:.2f}\")\n",
         "\n",
         "# Calcular el total general\n",
         "total_general = sum(ventas_por_categoria.values())\n",
@@ -675,12 +679,12 @@
       ],
       "metadata": {
         "id": "A34YupIuYhfF",
-        "outputId": "20d7c37e-f25f-4f11-d089-e61f424fb7e4",
+        "outputId": "8dfde6f9-392c-4d63-b29c-5f900142f361",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 51,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -727,6 +731,16 @@
             " Juguetes: $54641200.00\n",
             " Artículos para el hogar: $44579300.00\n",
             "\n",
+            "Ventas totales por categoría (todas las tiendas):\n",
+            " Electrónicos: $4889815300.00\n",
+            " Muebles: $2221980800.00\n",
+            " Juguetes: $211615600.00\n",
+            " Electrodomésticos: $4019072300.00\n",
+            " Artículos para el hogar: $170360400.00\n",
+            " Deportes y diversión: $432005500.00\n",
+            " Libros: $113088700.00\n",
+            " Instrumentos musicales: $1044612400.00\n",
+            "\n",
             "Total general de ventas: $13102551000.00\n"
           ]
         }
@@ -735,28 +749,88 @@
     {
       "cell_type": "code",
       "source": [
-        "\n"
+        "# Función para calcular y mostrar las ventas por categoría de una tienda\n",
+        "def ventas_por_categoria(tienda, numero):\n",
+        "    ventas = tienda.groupby('Categoría del Producto')['Precio'].sum()\n",
+        "    print(f\"\\nVentas por categoría en tienda {numero}:\")\n",
+        "    print(ventas)\n",
+        "#Mostrar resultados para cada tienda\n",
+        "ventas_por_categoria(tienda, 1)\n",
+        "ventas_por_categoria(tienda, 2)\n",
+        "ventas_por_categoria(tienda, 3)\n",
+        "ventas_por_categoria(tienda, 4)"
       ],
       "metadata": {
         "id": "yZR6cOjXYSk1",
-        "outputId": "53e3ff17-38ff-44df-f2f1-9271af148de9",
+        "outputId": "bfc6c00c-464d-4ed3-f6ab-b0ba90ef83a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "list"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 131
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Ventas por categoría en tienda 1:\n",
+            "Categoría del Producto\n",
+            "Artículos para el hogar     12698400.0\n",
+            "Deportes y diversión        39290000.0\n",
+            "Electrodomésticos          363685200.0\n",
+            "Electrónicos               429493500.0\n",
+            "Instrumentos musicales      91299000.0\n",
+            "Juguetes                    17995700.0\n",
+            "Libros                       8784900.0\n",
+            "Muebles                    187633700.0\n",
+            "Name: Precio, dtype: float64\n",
+            "\n",
+            "Ventas por categoría en tienda 2:\n",
+            "Categoría del Producto\n",
+            "Artículos para el hogar     12698400.0\n",
+            "Deportes y diversión        39290000.0\n",
+            "Electrodomésticos          363685200.0\n",
+            "Electrónicos               429493500.0\n",
+            "Instrumentos musicales      91299000.0\n",
+            "Juguetes                    17995700.0\n",
+            "Libros                       8784900.0\n",
+            "Muebles                    187633700.0\n",
+            "Name: Precio, dtype: float64\n",
+            "\n",
+            "Ventas por categoría en tienda 3:\n",
+            "Categoría del Producto\n",
+            "Artículos para el hogar     12698400.0\n",
+            "Deportes y diversión        39290000.0\n",
+            "Electrodomésticos          363685200.0\n",
+            "Electrónicos               429493500.0\n",
+            "Instrumentos musicales      91299000.0\n",
+            "Juguetes                    17995700.0\n",
+            "Libros                       8784900.0\n",
+            "Muebles                    187633700.0\n",
+            "Name: Precio, dtype: float64\n",
+            "\n",
+            "Ventas por categoría en tienda 4:\n",
+            "Categoría del Producto\n",
+            "Artículos para el hogar     12698400.0\n",
+            "Deportes y diversión        39290000.0\n",
+            "Electrodomésticos          363685200.0\n",
+            "Electrónicos               429493500.0\n",
+            "Instrumentos musicales      91299000.0\n",
+            "Juguetes                    17995700.0\n",
+            "Libros                       8784900.0\n",
+            "Muebles                    187633700.0\n",
+            "Name: Precio, dtype: float64\n"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Rq6tU_xSY3jk"
+      }
     },
     {
       "cell_type": "markdown",
@@ -764,12 +838,38 @@
         "# 3. Calificación promedio de la tienda\n"
       ],
       "metadata": {
-        "id": "Rq6tU_xSY3jk"
+        "id": "DgeMcqazuUzG"
       }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\n",
+        "def leer_csv(url):\n",
+        "    datos = []\n",
+        "    with urlopen(url) as respuesta:\n",
+        "        # Decodificar los datos\n",
+        "        lineas = respuesta.read().decode('utf-8').splitlines()\n",
+        "        reader = csv.DictReader(lineas)\n",
+        "        for fila in reader:\n",
+        "            datos.append(fila)\n",
+        "    return datos\n",
+        "\n",
+        "#Calcular la calificación promedio de cada tienda\n",
+        "for i, url in enumerate(urls):\n",
+        "    datos_tienda = leer_csv(url)\n",
+        "\n",
+        "    #Asignar variables para calcular promedio\n",
+        "    suma_calificaciones = 0\n",
+        "    cantidad_productos = 0\n",
+        "\n",
+        "    for producto in datos_tienda:\n",
+        "      try:\n",
+        "          # Intentar con diferentes posibles nombres de columna\n",
+        "          if 'Calificación' in producto:\n",
+        "              calificacion = float(producto['Calificación'])\n",
+        "          elif'Calificación'\n"
+      ],
       "metadata": {
         "id": "bh3jjjJwY5MU"
       },
