Se creó con Colab

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -37,14 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 400
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "dadb9da5-f968-4466-fa7a-fc1606c031fb"
+        "outputId": "61d7c0e1-23b4-44a0-aba8-1671c666a0a8"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6d3553c1-b5eb-4b84-ab7f-53c844dd3f7b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-137b3dd8-2413-415e-b9a2-45a7b39691bd\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6d3553c1-b5eb-4b84-ab7f-53c844dd3f7b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-137b3dd8-2413-415e-b9a2-45a7b39691bd')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6d3553c1-b5eb-4b84-ab7f-53c844dd3f7b button.colab-df-convert');\n",
+              "        document.querySelector('#df-137b3dd8-2413-415e-b9a2-45a7b39691bd button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6d3553c1-b5eb-4b84-ab7f-53c844dd3f7b');\n",
+              "        const element = document.querySelector('#df-137b3dd8-2413-415e-b9a2-45a7b39691bd');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -266,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-bc8d7c9c-17a9-4d37-a373-49cd412a1cf1\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-bc8d7c9c-17a9-4d37-a373-49cd412a1cf1')\"\n",
+              "    <div id=\"df-98ac7d63-babc-4618-9d79-53615276f64c\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-98ac7d63-babc-4618-9d79-53615276f64c')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -386,7 +386,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-bc8d7c9c-17a9-4d37-a373-49cd412a1cf1 button');\n",
+              "            document.querySelector('#df-98ac7d63-babc-4618-9d79-53615276f64c button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -403,7 +403,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 10
         }
       ],
       "source": [
@@ -484,13 +484,13 @@
       ],
       "metadata": {
         "id": "nKprHDZiDIz7",
-        "outputId": "877a488a-8854-448c-c475-7e1f9b403f88",
+        "outputId": "aba91871-1aa0-4522-8011-3e073d336406",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 752
         }
       },
-      "execution_count": 44,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,7 +587,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 11
         },
         {
           "output_type": "display_data",
@@ -679,12 +679,12 @@
       ],
       "metadata": {
         "id": "A34YupIuYhfF",
-        "outputId": "8dfde6f9-392c-4d63-b29c-5f900142f361",
+        "outputId": "c9814000-1f36-4255-92e3-ff9962f7a3db",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 54,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -762,12 +762,12 @@
       ],
       "metadata": {
         "id": "yZR6cOjXYSk1",
-        "outputId": "bfc6c00c-464d-4ed3-f6ab-b0ba90ef83a7",
+        "outputId": "9bd42d13-cc7b-4334-bb9b-2ae7352310fe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 58,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -845,45 +845,98 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "def leer_csv(url):\n",
-        "    datos = []\n",
-        "    with urlopen(url) as respuesta:\n",
-        "        # Decodificar los datos\n",
-        "        lineas = respuesta.read().decode('utf-8').splitlines()\n",
-        "        reader = csv.DictReader(lineas)\n",
-        "        for fila in reader:\n",
-        "            datos.append(fila)\n",
-        "    return datos\n",
+        "import pandas as pd\n",
         "\n",
-        "#Calcular la calificación promedio de cada tienda\n",
-        "for i, url in enumerate(urls):\n",
-        "    datos_tienda = leer_csv(url)\n",
+        "# Lista de posibles nombres de columna para calificación\n",
+        "COLUMNAS_CALIFICACION = ['Calificación', 'Calificacion', 'calificación', 'calificacion']\n",
         "\n",
-        "    #Asignar variables para calcular promedio\n",
-        "    suma_calificaciones = 0\n",
-        "    cantidad_productos = 0\n",
+        "def obtener_columna_calificacion(df):\n",
+        "    \"\"\"Devuelve el nombre correcto de la columna de calificación en el DataFrame.\"\"\"\n",
+        "    for col in COLUMNAS_CALIFICACION:\n",
+        "        if col in df.columns:\n",
+        "            return col\n",
+        "    return None\n",
         "\n",
-        "    for producto in datos_tienda:\n",
-        "      try:\n",
-        "          # Intentar con diferentes posibles nombres de columna\n",
-        "          if 'Calificación' in producto:\n",
-        "              calificacion = float(producto['Calificación'])\n",
-        "          elif'Calificación'\n"
+        "def calcular_promedio_calificacion(url):\n",
+        "    \"\"\"Lee un CSV desde una URL y calcula el promedio de calificaciones.\"\"\"\n",
+        "    try:\n",
+        "        df = pd.read_csv(url)\n",
+        "        col_calif = obtener_columna_calificacion(df)\n",
+        "        if col_calif is None:\n",
+        "            return None, f\"No se encontró columna de calificación en {url}\"\n",
+        "\n",
+        "        # Convertir a numérico (ignora errores)\n",
+        "        df[col_calif] = pd.to_numeric(df[col_calif], errors='coerce')\n",
+        "        promedio = df[col_calif].mean()\n",
+        "        return promedio, None\n",
+        "    except Exception as e:\n",
+        "        return None, str(e)\n",
+        "\n",
+        "\n",
+        "# Iteración sobre la lista y no sobre la variable\n",
+        "for i, current_urls in enumerate(urls, start=1):\n",
+        "    promedio, error = calcular_promedio_calificacion(current_urls)\n",
+        "    if error:\n",
+        "        print(f\"Tienda {i} - Error: {error}\")\n",
+        "    elif pd.notna(promedio):\n",
+        "        print(f\"Tienda {i} - Calificación promedio: {promedio:.2f}\")\n",
+        "    else:\n",
+        "        print(f\"Tienda {i} - No se encontraron calificaciones válidas.\")"
       ],
       "metadata": {
-        "id": "bh3jjjJwY5MU"
+        "id": "bh3jjjJwY5MU",
+        "outputId": "3b7d1947-f44e-47ba-e301-c21b0606b32d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tienda 1 - Calificación promedio: 3.98\n",
+            "Tienda 2 - Calificación promedio: 4.04\n",
+            "Tienda 3 - Calificación promedio: 4.05\n",
+            "Tienda 4 - Calificación promedio: 4.00\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def clasificacion_promedio(tienda, numero):\n",
+        "    promedio = tienda['Calificación'].mean()\n",
+        "    print(f\"Clasificación promedio en Tienda {numero}: {promedio:.2f}\")\n",
+        "\n",
+        "# Mostrar resultados para cada tienda\n",
+        "clasificacion_promedio(tienda, 1)\n",
+        "clasificacion_promedio(tienda2, 2)\n",
+        "clasificacion_promedio(tienda3, 3)\n",
+        "clasificacion_promedio(tienda4, 4)"
+      ],
       "metadata": {
-        "id": "I0KkjPoTY88F"
+        "id": "I0KkjPoTY88F",
+        "outputId": "18bda8ec-90b3-4094-f9fc-15ac27c6ba80",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Clasificación promedio en Tienda 1: 3.98\n",
+            "Clasificación promedio en Tienda 2: 4.04\n",
+            "Clasificación promedio en Tienda 3: 4.05\n",
+            "Clasificación promedio en Tienda 4: 4.00\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
