--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -37,14 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 400
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "61d7c0e1-23b4-44a0-aba8-1671c666a0a8"
+        "outputId": "f4fef652-cd73-4a90-ab4a-874ab3d594a8"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-137b3dd8-2413-415e-b9a2-45a7b39691bd\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a4f9b2cf-866a-4b34-b8b3-b1ba102632d7\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-137b3dd8-2413-415e-b9a2-45a7b39691bd')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a4f9b2cf-866a-4b34-b8b3-b1ba102632d7')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-137b3dd8-2413-415e-b9a2-45a7b39691bd button.colab-df-convert');\n",
+              "        document.querySelector('#df-a4f9b2cf-866a-4b34-b8b3-b1ba102632d7 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-137b3dd8-2413-415e-b9a2-45a7b39691bd');\n",
+              "        const element = document.querySelector('#df-a4f9b2cf-866a-4b34-b8b3-b1ba102632d7');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -266,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-98ac7d63-babc-4618-9d79-53615276f64c\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-98ac7d63-babc-4618-9d79-53615276f64c')\"\n",
+              "    <div id=\"df-3e4bf314-37f7-4be2-a19c-068300f99452\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3e4bf314-37f7-4be2-a19c-068300f99452')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -386,7 +386,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-98ac7d63-babc-4618-9d79-53615276f64c button');\n",
+              "            document.querySelector('#df-3e4bf314-37f7-4be2-a19c-068300f99452 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -403,7 +403,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 3
         }
       ],
       "source": [
@@ -484,13 +484,13 @@
       ],
       "metadata": {
         "id": "nKprHDZiDIz7",
-        "outputId": "aba91871-1aa0-4522-8011-3e073d336406",
+        "outputId": "03709e1b-5759-4530-a120-c3d390ef6e77",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 752
         }
       },
-      "execution_count": 11,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,7 +587,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 4
         },
         {
           "output_type": "display_data",
@@ -679,12 +679,12 @@
       ],
       "metadata": {
         "id": "A34YupIuYhfF",
-        "outputId": "c9814000-1f36-4255-92e3-ff9962f7a3db",
+        "outputId": "5567647c-ccb8-4c0f-854d-57e163448be8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -762,12 +762,12 @@
       ],
       "metadata": {
         "id": "yZR6cOjXYSk1",
-        "outputId": "9bd42d13-cc7b-4334-bb9b-2ae7352310fe",
+        "outputId": "26daaa75-5deb-4ac0-a952-0d61bb04ff75",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -844,62 +844,74 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "#leemos nuestro archivo csv\n",
+        "def leer_csv(url):\n",
+        "    datos = []\n",
+        "    with urlopen(url) as respuesta:\n",
+        "        #Decodificamos los datos\n",
+        "        lineas = respuesta.read().decode('utf-8').splitlines()\n",
+        "        reader = csv.DirectReader(lineas)\n",
+        "        for fila in reader:\n",
+        "            datos.append(fila)\n",
+        "    return datos\n",
         "import pandas as pd\n",
-        "\n",
-        "# Lista de posibles nombres de columna para calificación\n",
-        "COLUMNAS_CALIFICACION = ['Calificación', 'Calificacion', 'calificación', 'calificacion']\n",
-        "\n",
-        "def obtener_columna_calificacion(df):\n",
-        "    \"\"\"Devuelve el nombre correcto de la columna de calificación en el DataFrame.\"\"\"\n",
-        "    for col in COLUMNAS_CALIFICACION:\n",
-        "        if col in df.columns:\n",
-        "            return col\n",
-        "    return None\n",
-        "\n",
-        "def calcular_promedio_calificacion(url):\n",
-        "    \"\"\"Lee un CSV desde una URL y calcula el promedio de calificaciones.\"\"\"\n",
-        "    try:\n",
-        "        df = pd.read_csv(url)\n",
-        "        col_calif = obtener_columna_calificacion(df)\n",
-        "        if col_calif is None:\n",
-        "            return None, f\"No se encontró columna de calificación en {url}\"\n",
-        "\n",
-        "        # Convertir a numérico (ignora errores)\n",
-        "        df[col_calif] = pd.to_numeric(df[col_calif], errors='coerce')\n",
-        "        promedio = df[col_calif].mean()\n",
-        "        return promedio, None\n",
-        "    except Exception as e:\n",
-        "        return None, str(e)\n",
+        "import csv\n",
+        "from urllib.request import urlopen\n",
         "\n",
         "\n",
-        "# Iteración sobre la lista y no sobre la variable\n",
-        "for i, current_urls in enumerate(urls, start=1):\n",
-        "    promedio, error = calcular_promedio_calificacion(current_urls)\n",
-        "    if error:\n",
-        "        print(f\"Tienda {i} - Error: {error}\")\n",
-        "    elif pd.notna(promedio):\n",
-        "        print(f\"Tienda {i} - Calificación promedio: {promedio:.2f}\")\n",
+        "\n",
+        "def clasificacion_promedio(df, numero_tienda):\n",
+        "    \"\"\"\n",
+        "    Calcula la calificación promedio de una tienda, manejando errores de conversión.\n",
+        "\n",
+        "    Args:\n",
+        "        df (pd.DataFrame): DataFrame con los datos de la tienda.\n",
+        "        numero_tienda (int): Número de la tienda.\n",
+        "    \"\"\"\n",
+        "    calificaciones_validas = []\n",
+        "    for calificacion_str in df['Calificación']:\n",
+        "        try:\n",
+        "            # Intentar convertir a número flotante\n",
+        "            calificacion_float = float(calificacion_str)\n",
+        "            calificaciones_validas.append(calificacion_float)\n",
+        "        except ValueError:\n",
+        "            # Manejar el error si no se puede convertir a número\n",
+        "            print(f\"Advertencia: La calificación '{calificacion_str}' en la Tienda {numero_tienda} no es numérica y será ignorada.\")\n",
+        "        except TypeError:\n",
+        "             # Manejar el error si el valor es None o no es una cadena\n",
+        "            print(f\"Advertencia: La calificación '{calificacion_str}' en la Tienda {numero_tienda} no es válida y será ignorada.\")\n",
+        "\n",
+        "\n",
+        "    if calificaciones_validas:\n",
+        "        promedio = sum(calificaciones_validas) / len(calificaciones_validas)\n",
+        "        print(f\"Clasificación promedio en Tienda {numero_tienda}: {promedio:.2f}\")\n",
         "    else:\n",
-        "        print(f\"Tienda {i} - No se encontraron calificaciones válidas.\")"
+        "        print(f\"No hay calificaciones numéricas válidas en la Tienda {numero_tienda}.\")\n",
+        "\n",
+        "# Mostrar resultados para cada tienda\n",
+        "clasificacion_promedio(tienda, 1)\n",
+        "clasificacion_promedio(tienda2, 2)\n",
+        "clasificacion_promedio(tienda3, 3)\n",
+        "clasificacion_promedio(tienda4, 4)\n",
+        "\n"
       ],
       "metadata": {
         "id": "bh3jjjJwY5MU",
-        "outputId": "3b7d1947-f44e-47ba-e301-c21b0606b32d",
+        "outputId": "cb3f3b19-b53d-43bf-d8c7-ddddddd3deba",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tienda 1 - Calificación promedio: 3.98\n",
-            "Tienda 2 - Calificación promedio: 4.04\n",
-            "Tienda 3 - Calificación promedio: 4.05\n",
-            "Tienda 4 - Calificación promedio: 4.00\n"
+            "Clasificación promedio en Tienda 1: 3.98\n",
+            "Clasificación promedio en Tienda 2: 4.04\n",
+            "Clasificación promedio en Tienda 3: 4.05\n",
+            "Clasificación promedio en Tienda 4: 4.00\n"
           ]
         }
       ]
@@ -924,7 +936,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
